moved index.html to root folder so it would work with cfhull.github.io direct link

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<title>Christopher Hull</title>
 
 		<!-- Local CSS -->
-		<link href="css/style.css" rel="stylesheet" type="text/css" />
+		<link href="public/css/style.css" rel="stylesheet" type="text/css" />
 
 		<!-- JS Libraries -->
-		<script src="js/lib/jquery.min.js"></script>
-		<script src="js/lib/bootstrap.js"></script>
-		<script src="js/lib/d3.min.js"></script>
-		<script src="js/lib/index.js"></script>
-		<script src="js/lib/d3.legend.js"></script>
+		<script src="public/js/lib/jquery.min.js"></script>
+		<script src="public/js/lib/bootstrap.js"></script>
+		<script src="public/js/lib/d3.min.js"></script>
+		<script src="public/js/lib/index.js"></script>
+		<script src="public/js/lib/d3.legend.js"></script>
 		
 		<!-- Local JS -->
-		<script src="js/javascript.js"></script>
-		<script src="js/skillsChart.js"></script>
+		<script src="public/js/javascript.js"></script>
+		<script src="public/js/skillsChart.js"></script>
 
 	</head>
 	<body>
@@ -48,12 +48,12 @@
 				<div class="jumbotron">
 					<div class="row">
 						<div class="col-md-4">
-							<img src="images/profilepic.jpg" alt="" class="img-thumbnail">
+							<img src="public/images/profilepic.jpg" alt="" class="img-thumbnail">
 						</div>    
 						<div class="col-md-8">
 							<h1>Christopher Hull</h1>
 							<h3>Software Developer</h3>
-							<h3>Current working on an exoplanet data visualization using D3.js, Check it out <a href="exoplanets.html">HERE</a></h3>
+							<h3>Current working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></h3>
 						</div>
 					</div>
 				</div>
