--- a/public/exoplanets.html
+++ b/public/exoplanets.html
@@ -23,7 +23,7 @@
 		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<div class="container container-exoplanets">
 						<div class="navbar-header">
-								<a class="navbar-brand active" href="index.html">Exoplanet Visualization</a>
+								<a class="navbar-brand active" href="../index.html">Exoplanet Visualization</a>
 						</div>
 				</div>
 		</div>
