--- a/index.html
+++ b/index.html
@@ -4,262 +4,138 @@
 		<meta charset="UTF-8">	
 		<title>Christopher Hull</title>
 
-		<!-- Local CSS -->
-		<link href="public/css/style.css" rel="stylesheet" type="text/css" />
-
-		<!-- JS Libraries -->
-		<script src="public/js/lib/jquery.min.js"></script>
-		<script src="public/js/lib/bootstrap.js"></script>
-		<script src="public/js/lib/d3.min.js"></script>
-		<script src="public/js/lib/index.js"></script>
-		<script src="public/js/lib/d3.legend.js"></script>
-		
-		<!-- Local JS -->
-		<script src="public/js/javascript.js"></script>
-		<script src="public/js/skillsChart.js"></script>
-
+		<link href="public/site.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 
 		<!-- Fixed navbar -->
-		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<a class="navbar-brand active" href="#">Christopher Hull</a>
-				</div>
-				<div id="navbar-sections">
-					<ul class="nav navbar-nav">
+		<div class="navbar">
+				<div class="navbar-header">Christopher Hull</div>
+					<ul class="navbar-sections">
 						<li><a href="#about">About</a></li>
 						<li><a href="#experience">Experience</a></li>
 						<li><a href="#education">Education</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
-				</div>
 			</div>
 		</div>
 
-		<!-- Body of web page goes inside container tags -->
+    <section id="summary">
+      <div class="profile-pic-container">
+        <img src="public/profilepic.jpg" alt="" class="img-thumbnail">
+      </div>
+      <div>
+        <h1>Christopher Hull</h1>
+        <h3>Software Developer</h3>
+        <h3>Current working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></h3>
+    </section>
 
-		<div class="container container-main">
+    <!-- About Me -->
+    <section class="resume-section">
+      <div class="resume-section-header">
+        <span class="icon about-icon"></span>
+        <h2>About Me</h2>
+      </div>
+      <div class="resume-section-body">
+        <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team has transferred to my work, and allowed me to thoroughly enjoy all the positions I've held. I am developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
+      </div>
+    </section>
+    <hr>
 
-			<!--Jumbotron header -->
-			<section id="jumbotron">
-				<div class="jumbotron">
-					<div class="row">
-						<div class="col-md-4">
-							<img src="public/images/profilepic.jpg" alt="" class="img-thumbnail">
-						</div>    
-						<div class="col-md-8">
-							<h1>Christopher Hull</h1>
-							<h3>Software Developer</h3>
-							<h3>Current working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></h3>
-						</div>
-					</div>
-				</div>
-			</section>
+    <!-- Experience -->
+    <section class="resume-section">
+      <div class="resume-section-header">
+        <span class="icon experience-icon"></span>
+        <h2>Experience</h2>
+      </div>
+      <div class="resume-section-body">
+        <div class="employment-section">
+          <h3>Software Developer</h3>
+          <h4>Ellucian (July 2015 - Present)</h4>
+          <p>I work within an Agile Scrum environment to create new features and fix bugs for a product built on top of Microsoft Dynamics CRM using C#/.NET, and HTML/JavaScript/CSS.</p>								
+        </div>
+        <div class="employment-section">
+          <h3>Unity3D Programming Engineer (Short-term Contract)</h3>
+          <h4>Galvanize Labs (April 2014 - June 2014)</h4>
+          <p>In this short-term contract position, I used the Unity3D game engine to write scripts, fix bugs, and reorganize game assets for an educational platformer game. I also provided gameplay and issues feedback to the lead developer and game designer. Read more about it below.</p>
+          <p><a href="http://www.takenchargegame.com">Taken Charge</a></p>
+        </div>
+      </div>
+    </section>
+    <hr>
 
+    <!-- Education -->
+    <section class="resume-section">
+      <div class="resume-section-header">
+        <span class="icon education-icon"></span>
+        <h2>Education</h2>
+      </div>
+      <div class="resume-section-body">
+        <h3>Bachelors of Science, Computer Science, Minor in Cyber Security</h3>
+        <h4>Troy University (Graduated May 2015)</h4>
+        <p>Computer Science Coursework: Data Structures and Algorithms; Programming Languages; Web Development
+        Technologies; Software Engineering; Systems Analysis & Design; Operating Systems; Networking; Databases; COBOL
+        Programming</p>
+        <p>Cybersecurity Coursework: Computer Forensics; Cyber Crime; Computer Security</p>
+        <p>Completed cyber security training courses in digital forensics, secure software, cyber law, and cyber incident analysis
+        and response through the National Emergency Response and Rescue Training Center in cooperation with the
+        Department of Homeland Security and Federal Emergency Management Agency (DHS/FEMA).</p>
+      </div>
+    </section>
+    <hr>
+    
+    <section class="resume-section">
+      <div class="resume-section-header">
+        <span class="icon skills-icon"></span>
+        <h2>Skills</h2>
+      </div>
+      <div class="resume-section-body">
+        <p>Personal evaluation of my proficiency at a variety of technologies using the NIH Proficiency Scale.</p>
+        <ul>
+          <li>1: Fundamental awareness (basic knowledge)</li>
+          <li>2: Novice (limited experience)</li>
+          <li>3: Intermediate (practical application)</li>
+          <li>4: Advanced (applied theory)</li>
+          <li>5: Expert (recognized authority)</li>
+        </ul>
+        <div>
+          <div id="skillChart"></div>
+        </div>
+        <div id="skillDescription">
+          <p id="descriptionParagraph">Click any bar for more information.</p>
+        </div>		
+      </div>
+    </section>
+    <hr>
 
-			<!-- About Me -->
-			<section id="about">
-				<div class="row">
-					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class="heading about">
-							<span class="glyphicon glyphicon-sunglasses" style="font-size:7em" aria-hidden="true"></span>
-							<h2>About Me</h2>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-8 col-md-10">
-						<p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team has transferred to my work, and allowed me to thoroughly enjoy all the positions I've held. I am developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
-					</div>
-				</div>
-			</section>
-			<hr>
-
-			<!-- Experience -->
-			<section id="experience">
-				<div class="row">
-					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class="heading">
-							<span class="glyphicon glyphicon-briefcase" style="font-size:7em" aria-hidden="true"></span>
-							<h2>Experience</h2>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-8 col-md-10">
-						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-10">
-								<h3>Software Developer</h3>
-								<h4>Ellucian (July 2015 - Present)</h4>
-								<p>I work within an Agile Scrum environment to create new features and fix bugs for a product built on top of Microsoft Dynamics CRM using C#/.NET, and HTML/JavaScript/CSS.</p>								
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-10">
-								<h3>Unity3D Programming Engineer (Short-term Contract)</h3>
-								<h4>Galvanize Labs (April 2014 - June 2014)</h4>
-								<p>In this short-term contract position, I used the Unity3D game engine to write scripts, fix bugs, and reorganize game assets for an educational platformer game. I also provided gameplay and issues feedback to the lead developer and game designer. Read more about it below.</p>
-								<p><a href="http://www.takenchargegame.com">Taken Charge</a></p>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-10">
-								<h3>Web Developer</h3>
-								<h4>HDI - Nebraska Chapter (August 2012 - March 2013)</h4>
-								<p>I volunteered in maintaining the website for this volunteer professional organization while they underwent a major website revision.</p>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-10">
-								<h3>Business Support Specialist</h3>
-								<h4>CSG International (May 2011 - August 2012)</h4>
-								<p>I supported our company's business continuity planning operations. This involved:</p>
-								<ul>
-									<li>Writing VBA macros to organize and streamline processes contributing to cost avoidance initiatives</li>
-									<li>Developing a GUI front-end to our SQL database, using ASP.NET</li>
-									<li>Creating automated graphs and crawl banners for a monitoring website during a disaster recovery exercise</li>
-									<li>Taking training courses in Process Management and Agile/UDM to improve my efficacy in managing the software development lifecycle</li>
-								</ul>
-								<p>My managers nominated me for, and I received, the 2012 AIM Institute College Intern of the Year Award for Nebraska and the surrounding area. Learn more about the institute and its importance to IT companies in the Midwest <a href="http://aimforbrilliance.org/">here</a>.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<hr>
-
-			<!-- Education -->
-			<section id="education">
-				<div class="row">
-					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class="heading">
-							<span class="glyphicon glyphicon-book" style="font-size:7em" aria-hidden="true"></span>
-							<h2>Education</h2>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-8 col-md-10">
-						<h3>Bachelors of Science, Computer Science, Minor in Cyber Security</h3>
-						<h4>Troy University (Graduated May 2015)</h4>
-						<p>Computer Science Coursework: Data Structures and Algorithms; Programming Languages; Web Development
-						Technologies; Software Engineering; Systems Analysis & Design; Operating Systems; Networking; Databases; COBOL
-						Programming</p>
-						<p>Cybersecurity Coursework: Computer Forensics; Cyber Crime; Computer Security</p>
-						<p>Completed cyber security training courses in digital forensics, secure software, cyber law, and cyber incident analysis
-						and response through the National Emergency Response and Rescue Training Center in cooperation with the
-						Department of Homeland Security and Federal Emergency Management Agency (DHS/FEMA).</p>
-					</div>
-				</div>
-			</section>
-			<hr>
-			
-			<section id="skills">
-				<div class="row">
-					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class="heading">
-							<span class="glyphicon glyphicon-wrench" style="font-size:7em" aria-hidden="true"></span>
-							<h2>Skills</h2>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-8 col-md-10">
-						<div class="row">
-							<div class="col-xs-12 col-sm-8 col-md-10">
-								<p>Personal evaluation of my proficiency at a variety of technologies using the NIH Proficiency Scale.</p>
-								<ul>
-									<li>1: Fundamental awareness (basic knowledge)</li>
-									<li>2: Novice (limited experience)</li>
-									<li>3: Intermediate (practical application)</li>
-									<li>4: Advanced (applied theory)</li>
-									<li>5: Expert (recognized authority)</li>
-								</ul>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-sm-12 col-md-6">
-								<div id="skillChart"></div>
-							</div>
-							<div class="col-xs-12 col-sm-12 col-md-6">
-								<div id="skillDescription">
-									<p id="descriptionParagraph">Click any bar for more information.</p>
-								</div>		
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<hr>
-		</div> <!-- /container -->
-
-		<!-- Footer -->
-		<section id="contact">
-			<div class="container-fluid footer">
-				<div class="container"> 
-					<div class="row">
-						<div class="col-xs-12 col-sm-4 col-md-2">
-							<div class="heading contact">
-								<span class="glyphicon glyphicon-user" style="font-size:7em" aria-hidden="true"></span>
-								<h2>Contact Me</h2>
-							</div>
-						</div>
-						<div class="col-xs-12 col-sm-8 col-md-10">
-
-							<div class="row">
-								<div class="col-md-1 col-md-offset-4">
-									<div class="contactGlyph">
-										<a href="https://www.google.com/maps/place/Katherine+Paige+Ln,+Falls+Church,+VA+22042"><i class="fa fa-map-marker fa-2x"></i></a>
-									</div>
-								</div>
-								<div class="col-md-6 contactLines">
-									<a href="https://www.google.com/maps/place/Katherine+Paige+Ln,+Falls+Church,+VA+22042">2846 Katherine Paige Ln, Falls Church, VA</a>
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-md-1 col-md-offset-4">
-									<div class="contactGlyph">
-										<a href="mailto:chris.f.hull@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
-									</div>
-								</div>
-								<div class="col-md-6 contactLines">
-									<a href="mailto:chris.f.hull@gmail.com">chris.f.hull@gmail.com</a>
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-md-1 col-md-offset-4">
-									<div class="contactGlyph">
-										<i class="fa fa-phone fa-2x"></i>
-									</div>
-								</div>
-								<div class="col-md-6 contactLines">
-									+1 402 917 4914
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-md-1 col-md-offset-4">
-									<div class="contactGlyph">
-										<a href="https://www.linkedin.com/in/hullchristopher"><i class="fa fa-linkedin fa-2x"></i></a>
-									</div>
-								</div>
-								<div class="col-md-6 contactLines">
-									<a href="https://www.linkedin.com/in/hullchristopher">linkedin.com/in/hullchristopher</a>
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-md-1 col-md-offset-4">
-									<div class="contactGlyph">
-										<a href="https://www.github.com/cfhull"><i class="fa fa-github fa-2x"></i></a>
-									</div>
-								</div>
-								<div class="col-md-6 contactLines">
-									<a href="https://www.github.com/cfhull">github.com/cfhull</a>
-								</div>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+    <div class="footer">
+      <section class="contact">
+          <div class="contact-header">
+            <span class="header-icon icon-contact"></span>
+            <h2>Contact Me</h2>
+          </div>
+          <div class="contact-body">
+            <div class="contact-item">
+              <span class="icon-email"></span>
+              <a class="email" href="mailto:chris.f.hull@gmail.com">chris.f.hull@gmail.com</a>
+            </div>
+            <div class="contact-item">
+              <span class="icon-telephone"></span>
+              +1 402 917 4914
+            </div>
+            <div class="contact-item">
+              <span class="icon-linkedin"></span>
+              <a href="https://www.linkedin.com/in/hullchristopher">linkedin.com/in/hullchristopher</a>
+            </div>
+            <div class="contact-item">
+              <span class="icon-github"></span>
+              <a href="https://www.github.com/cfhull">github.com/cfhull</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 	</body>
+  <script src="public/bundle.js"></script>
 </html>
