--- a/index.html
+++ b/index.html
@@ -10,41 +10,42 @@
 
 		<!-- Fixed navbar -->
 		<div class="navbar">
-				<div class="navbar-header">Christopher Hull</div>
-					<ul class="navbar-sections">
-						<li><a href="#about">About</a></li>
-						<li><a href="#experience">Experience</a></li>
-						<li><a href="#education">Education</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-			</div>
+      <div class="navbar-content">
+        <div class="navbar-header">Christopher Hull</div>
+        <ul class="navbar-sections">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
 		</div>
 
-    <section id="summary">
+    <section class="summary">
       <div class="profile-pic-container">
         <img src="public/profilepic.jpg" alt="" class="img-thumbnail">
       </div>
-      <div>
+      <div class="summary-content">
         <h1>Christopher Hull</h1>
         <h3>Software Developer</h3>
-        <h3>Current working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></h3>
+        <p>Current working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></p>
     </section>
 
     <!-- About Me -->
-    <section class="resume-section">
+    <section id="about" class="resume-section">
       <div class="resume-section-header">
         <span class="icon about-icon"></span>
         <h2>About Me</h2>
       </div>
       <div class="resume-section-body">
-        <p>I have experience in cyber security, web development, and video game development, love each of the fields, and am excited for opportunities in any of them. My problem-solving skills, my careful attention to detail, and my ability to work independently or in a team has transferred to my work, and allowed me to thoroughly enjoy all the positions I've held. I am developing video games with the local independent development community, and continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
+        <p>I am traditionally a full-stack developer who has focused the past few years on learning front-end technologies in order to move to a more front-end heavy role. I have knowledge in various modern web technologies, with a specific focus on those that aren't reliant on heavy frameworks. I tend to start a project using vanilla JS/ES6 with Babel, PostCSS/SASS, Tape testing framework, and Browserify/Rollup with NPM scripts to transpile/bundle, and add larger tools as a project grows if needed. I have 9 months of working experience in Angular 2/4 creating a front-end heavy geospatial application with Leaflet. I also have some basic knowledge of React and web components, but haven't used them in a professional capacity as of yet. I am continuing to improve upon this website to keep my skills in each of these areas sharp. Please look over my previous experience and skills and contact me if you have any questions or if you would like me to join your team!</p>
       </div>
     </section>
     <hr>
 
     <!-- Experience -->
-    <section class="resume-section">
+    <section id="experience" class="resume-section">
       <div class="resume-section-header">
         <span class="icon experience-icon"></span>
         <h2>Experience</h2>
@@ -52,8 +53,13 @@
       <div class="resume-section-body">
         <div class="employment-section">
           <h3>Software Developer</h3>
-          <h4>Ellucian (July 2015 - Present)</h4>
-          <p>I work within an Agile Scrum environment to create new features and fix bugs for a product built on top of Microsoft Dynamics CRM using C#/.NET, and HTML/JavaScript/CSS.</p>								
+          <h4>PlanetRisk (January 2017 - Present)</h4>
+          <p>In this role, I built a geospatial analytics tool in Angular 4 using Leaflet.js maps with a .NET Core backend. I also created a registration application with administrative functionality to process users in the system.</p>
+        </div>
+        <div class="employment-section">
+          <h3>Software Developer</h3>
+          <h4>Ellucian (July 2015 - January 2017)</h4>
+          <p>I worked within an Agile Scrum environment to create new features and fix bugs for a product built on top of Microsoft Dynamics CRM using C#/.NET, and HTML/JavaScript/CSS.</p>								
         </div>
         <div class="employment-section">
           <h3>Unity3D Programming Engineer (Short-term Contract)</h3>
@@ -66,7 +72,7 @@
     <hr>
 
     <!-- Education -->
-    <section class="resume-section">
+    <section id="education" class="resume-section">
       <div class="resume-section-header">
         <span class="icon education-icon"></span>
         <h2>Education</h2>
@@ -85,7 +91,7 @@
     </section>
     <hr>
     
-    <section class="resume-section">
+    <section id="skills" class="resume-section">
       <div class="resume-section-header">
         <span class="icon skills-icon"></span>
         <h2>Skills</h2>
@@ -99,15 +105,14 @@
           <li>4: Advanced (applied theory)</li>
           <li>5: Expert (recognized authority)</li>
         </ul>
-        <div>
+        <div id="skillChart-container">
           <div id="skillChart"></div>
-        </div>
-        <div id="skillDescription">
+          <div id="skillDescription">
           <p id="descriptionParagraph">Click any bar for more information.</p>
+        </div>
         </div>		
       </div>
     </section>
-    <hr>
 
     <div class="footer">
       <section class="contact">
