--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <div id="skillChart-container">
           <div id="skillChart"></div>
           <div id="skillDescription">
+<script src="https://d3js.org/d3.v4.min.js"></script>
           <p id="descriptionParagraph">Click any bar for more information.</p>
         </div>
         </div>		
@@ -142,5 +143,6 @@
       </section>
     </div>
 	</body>
-  <script src="public/bundle.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script type="module" src="public/main.js"></script>
 </html>
