fix fonts in firefox

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">	
 		<title>Christopher Hull</title>
 
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="public/site.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -29,7 +30,7 @@
       <div class="summary-content">
         <h1>Christopher Hull</h1>
         <h3>Software Developer</h3>
-        <p>Current working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></p>
+        <p>Currently working on an exoplanet data visualization using D3.js, Check it out <a href="public/exoplanets.html">HERE</a></p>
     </section>
 
     <!-- About Me -->
@@ -108,7 +109,6 @@
         <div id="skillChart-container">
           <div id="skillChart"></div>
           <div id="skillDescription">
-<script src="https://d3js.org/d3.v4.min.js"></script>
           <p id="descriptionParagraph">Click any bar for more information.</p>
         </div>
         </div>		
