--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	      <div class="content">
 	        <h1>Christopher Hull</h1>
 	        <h3>Software Developer</h3>
-	        <p>Current working on an exoplanet data visualization using D3.js, Check it out <a href="/exoplanets">HERE</a></p>
+	        <p>Current working on an exoplanet data visualization using D3.js. Will be available shortly</a></p>
         </div>
       </div>
       <div class="resume">
